# termstatus

./: Cargo.toml  README.md
examples/: cargolike.rs  with_display.rs  with_style.rs
src/: lib.rs  style.rs
